--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Quiz Hub - Overall Level</title>
+  <title>Quiz Hub - Pet Egg System</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -13,50 +13,29 @@
       background: #f0f0f0;
       text-align: center;
     }
-    h1 {
-      margin-bottom: 10px;
-    }
-    #overallLevel {
-      font-size: 1.5em;
-      margin: 20px 0;
-      color: #333;
-    }
-    ul {
-      list-style: none;
-      padding: 0;
-      margin: 30px 0 0 0;
-    }
-    li {
-      margin: 10px 0;
-      font-size: 1.2em;
-    }
-    a {
-      text-decoration: none;
-      color: #0066cc;
-    }
-    a:hover {
-      text-decoration: underline;
-    }
-    .levelValue {
-      font-weight: bold;
-      color: #0066cc;
-      margin-left: 8px;
-      font-size: 1em;
-    }
+    h1 { margin-bottom: 10px; }
+    ul { list-style: none; padding: 0; margin: 30px 0 0 0; }
+    li { margin: 10px 0; font-size: 1.2em; }
+    a { text-decoration: none; color: #0066cc; }
+    a:hover { text-decoration: underline; }
+    .levelValue { font-weight: bold; color: #0066cc; margin-left: 8px; font-size: 1em; }
+    #petContainer img { width: 120px; margin: 10px; }
+    #petContainer button { margin: 10px 12px; font-size: 1em; padding: 8px 16px;}
+    #petContainer p { margin-top: 10px; font-size: 1.1em;}
+    #petContainer .jp { color: #444; font-size: 0.95em; margin-bottom: 10px;}
   </style>
 </head>
 <body>
   <h1>Welcome to the Quiz Hub!</h1>
-  <p id="overallLevel"></p>
+  <div id="petContainer"></div>
 
   <ul>
     <li>
- <a href="https://phennylalanine.github.io/Yach-5-Quiz-Home/alphabetTyping" target="_blank" rel="noopener noreferrer">
+      <a href="https://phennylalanine.github.io/Yach-5-Quiz-Home/alphabetTyping" target="_blank" rel="noopener noreferrer">
         Alphabet Keyboard Practice - キーボードの練習
- 
       </a>
-</li>
-      
+    </li>
+    <li>
       <a href="https://phennylalanine.github.io/Yach-5-Quiz-Home/MonthsS" target="_blank" rel="noopener noreferrer">
         Round 1 Months Quiz - 月クイズ
       </a>
@@ -81,7 +60,6 @@
       <span class="levelValue" data-key="EventMlevel">(Level: 0)</span>
     </li>
   </ul>
-
   <script src="script.js"></script>
 </body>
 </html>
