--- a/EventM/index.html
+++ b/EventM/index.html
@@ -47,6 +47,16 @@
 
   <canvas id="confettiCanvas" style="position:fixed; top:0; left:0; pointer-events:none; z-index:1000;"></canvas>
 
+  <!-- Modal for milestone notification -->
+  <div id="milestoneModal" class="modal">
+    <div class="modal-content">
+      <span id="closeModalBtn" class="close">&times;</span>
+      <h2 id="milestoneTitle">🎉 Milestone!</h2>
+      <p id="milestoneMessage"></p>
+      <button id="goHomepageBtn">Go to Homepage</button>
+    </div>
+  </div>
+
   <script src="script.js"></script>
 </body>
 </html>
