--- a/MonthsM/index.html
+++ b/MonthsM/index.html
@@ -4,9 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Japanese-English Quiz</title>
-  <link rel="stylesheet" href="style.css"> <!-- ✅ Link to external CSS -->
+  <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
   <h1>Japanese-English Quiz</h1>
 
