--- a/MonthsM/index.html
+++ b/MonthsM/index.html
@@ -10,6 +10,43 @@
   <h1>Japanese-English Quiz</h1>
   <!-- ...rest of your code... -->
 
+    <div id="startScreen" class="active">
+    <button id="startBtn">Start Quiz</button>
+  </div>
+
+  <div id="quizScreen">
+    <!-- Stats Panel -->
+    <div id="statsPanel">
+      <div class="level-section">
+        <div>
+          <strong>Level:</strong> <span id="level">1</span>
+        </div>
+        <div id="xpBarContainer" aria-label="Experience Progress Bar" role="progressbar" aria-valuemin="0" aria-valuemax="100">
+          <div id="xpBar"></div>
+        </div>
+        <small id="xpText">0 / 3 XP</small>
+      </div>
+      <div>
+        <strong>Score:</strong> <span id="points">0</span> |
+        <strong>Combo:</strong> <span id="combo">0</span>
+      </div>
+    </div>
+
+    <div id="jpText">月曜日</div>
+    <div id="choicesText"></div>
+
+    <!-- Hidden English text element for JS -->
+    <div id="enText" style="display:none;"></div>
+
+    <input type="text" id="answerInput" autocomplete="off" placeholder="Type the correct English" />
+    <div id="feedback"></div>
+
+    <button id="nextBtn" disabled>Next</button>
+    <button id="tryAgainBtn" style="display:none;">Try Again</button>
+  </div>
+
+  <canvas id="confettiCanvas" style="position:fixed; top:0; left:0; pointer-events:none; z-index:1000;"></canvas>
+
   <!-- Modal for milestone notification -->
   <div id="milestoneModal" class="modal">
     <div class="modal-content">
