--- a/MonthsM/index.html
+++ b/MonthsM/index.html
@@ -1,76 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Japanese-English Quiz</title>
+  <meta charset="UTF-8">
+  <title>Quiz</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Japanese-English Quiz</h1>
-  <!-- ...rest of your code... -->
 
-    <div id="startScreen" class="active">
+  <!-- Start Screen -->
+  <div id="startScreen" class="screen active">
+    <h1>Welcome to the Quiz!</h1>
     <button id="startBtn">Start Quiz</button>
   </div>
 
-  <div id="quizScreen">
-    <!-- Stats Panel -->
-    <div id="statsPanel">
-      <div class="level-section">
-        <div>
-          <strong>Level:</strong> <span id="level">1</span>
-        </div>
-        <div id="xpBarContainer" aria-label="Experience Progress Bar" role="progressbar" aria-valuemin="0" aria-valuemax="100">
-          <div id="xpBar"></div>
-        </div>
-        <small id="xpText">0 / 3 XP</small>
+  <!-- Quiz Screen -->
+  <div id="quizScreen" class="screen">
+    <!-- Stats -->
+    <div id="stats">
+      <p>Points: <span id="points">0</span></p>
+      <p>Combo: <span id="combo">0</span></p>
+      <p>Quiz Level: <span id="level">1</span></p>
+      <div id="xpBarContainer">
+        <div id="xpBar"></div>
       </div>
-      <div>
-        <strong>Score:</strong> <span id="points">0</span> |
-        <strong>Combo:</strong> <span id="combo">0</span>
-      </div>
+      <p id="xpText">0 / 3</p>
     </div>
 
-    <div id="jpText">月曜日</div>
-    <div id="choicesText"></div>
+    <!-- Question -->
+    <div id="questionBox">
+      <p id="jpText">日本語</p>
+      <p id="enText">(English will be spoken)</p>
+      <div id="choicesText"></div>
+    </div>
 
-    <!-- Hidden English text element for JS -->
-    <div id="enText" style="display:none;"></div>
-
-    <input type="text" id="answerInput" autocomplete="off" placeholder="Type the correct English" />
-    <div id="feedback"></div>
-
+    <!-- Answer input -->
+    <input type="text" id="answerInput" placeholder="Type your answer...">
     <button id="nextBtn" disabled>Next</button>
     <button id="tryAgainBtn" style="display:none;">Try Again</button>
+
+    <!-- Feedback -->
+    <p id="feedback"></p>
   </div>
 
-  <canvas id="confettiCanvas" style="position:fixed; top:0; left:0; pointer-events:none; z-index:1000;"></canvas>
+  <!-- Confetti Canvas -->
+  <canvas id="confettiCanvas"></canvas>
 
-  <!-- Modal for milestone notification -->
-  <div id="milestoneModal" class="modal">
-    <div class="modal-content">
-      <span id="closeModalBtn" class="close">&times;</span>
-      <h2 id="milestoneTitle">🎉 Milestone!</h2>
-      <p id="milestoneMessage"></p>
-      <button id="goHomepageBtn">Go to Homepage</button>
-    </div>
-  </div>
-
-  <!-- Pet Selection Modal (add this!) -->
+  <!-- PET EVOLUTION MODAL -->
   <div id="petModal" class="modal">
     <div class="modal-content">
       <span class="close">&times;</span>
-      <h2>Choose your pet!</h2>
-      <div>
-        <button class="pet-choice" data-pet="Dragon">Dragon</button>
-        <button class="pet-choice" data-pet="Unicorn">Unicorn</button>
-        <button class="pet-choice" data-pet="Wolf">Wolf</button>
-        <!-- Add more pets as needed -->
+
+      <h2 id="petModalTitle">Choose your pet!</h2>
+      <p id="petModalDesc">Pick your companion.</p>
+
+      <div class="pet-options">
+        <div class="pet-choice" data-pet="Dragon">🐉 Dragon</div>
+        <div class="pet-choice" data-pet="Phoenix">🔥 Phoenix</div>
+        <div class="pet-choice" data-pet="Wolf">🐺 Wolf</div>
       </div>
     </div>
   </div>
 
+  <!-- Quiz Logic -->
   <script src="script.js"></script>
 </body>
 </html>
