--- a/MonthsM/index.html
+++ b/MonthsM/index.html
@@ -26,7 +26,7 @@
       </div>
 
       <div><strong>Score:</strong> <span id="quizScore">0</span></div>
-      <div><strong>Combo:</strong> <span id="comboDisplay">0</span></div>
+      <span id="combo">0</span>
     </div>
 
     <!-- Question -->
@@ -66,8 +66,9 @@
       <button id="goHomepageBtn" style="display:none;">Go to homepage</button>
     </div>
   </div>
+  
 
   <!-- Quiz Logic -->
-  <script src="script.js"></script>
+ <script type="module" src="main.js"></script>
 </body>
 </html>
